package org.example.Practica_1;
import java.time.LocalDate;
import java.util.Scanner;

public class Invitado {
    private String nombre;
    private String profesion;
    private LocalDate fecha_visita;
    private int temporada;
Scanner teclado= new Scanner(System.in);
    public Invitado(String nombre, String profesion, int temporada, LocalDate fecha_visita){

        this.nombre=nombre;
        this.profesion=profesion;
        this.temporada=temporada;
  setFecha_visita();

    }



    public String getNombre() {
        return nombre;
    }

    public void setNombre(String nombre) {
        this.nombre = nombre;
    }

    public String getProfesion() {
        return profesion;
    }

    public void setProfesion(String profesion) {
        this.profesion = profesion;
    }

    public LocalDate getFecha_visita() {
        return fecha_visita;
    }

    public void setFecha_visita() {
        System.out.println("Dime el año que vino el invitado: ");
        int año = teclado.nextInt();

        System.out.println("En que mes vino el invitado:");
        int mes = teclado.nextInt();

        System.out.println("Introduce el dia que vino el invitado:");
        int dia = teclado.nextInt();

        this.fecha_visita = LocalDate.of(año,mes,dia);
    }


    public int getTemporada() {
        return temporada;
    }

    public void setTemporada(int temporada) {
        this.temporada = temporada;
    }

    @Override
    public String toString() {
        return "Invitado{" +
                "nombre='" + nombre + '\'' +
                ", profesion='" + profesion + '\'' +
                ", fecha_visita=" + fecha_visita +
                ", temporada=" + temporada +
                '}';
    }


}